@@ -2,6 +2,7 @@
 - Added process resource analysis.
 - Added better callback analysis.
 - Added better string analysis (json, file path, callback, xml)
+- Added timestamp analysis for large integers.
 - Change: Removed all deprecations.
 - Change: Removed the PHP 5.x fatal error handler.
 - Change: Dropped PHP 5.x support.
